--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -28,7 +28,7 @@
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="./assets/plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/plugins/select2/css/select2.min.css">
@@ -54,9 +54,11 @@
                             </button>
                         </div>
                         <div id="user-mobile" class="header-inner_mobile__user d-block d-lg-none">
-                            <a id="call-user_mobile" href="javascript:void(0)">
-                                <i class="fas fa-user"></i>
-                                Tài khoản
+                            <a id="call-user_mobile" class="btn-customize" href="javascript:void(0)">
+                                <span>
+                                    <i class="fas fa-user"></i>
+                                    Tài khoản
+                                </span>
                             </a>
                             <div class="header-mobile_user__inner">
                                 <ul class="list-unstyled mb-0">
@@ -130,15 +132,19 @@
                         </div>
                         <div class="header-inner_user d-lg-flex align-items-center justify-content-end">
                             <div class="header-inner_user__item d-none">
-                                <a href="dang-ky.html" class="btn btn-register">
-                                    <i class="fas fa-user mr-1"></i>
-                                    Đăng ký
+                                <a href="dang-ky.html" class="btn btn-register btn-customize">
+                                    <span>
+                                        <i class="fas fa-user mr-1"></i>
+                                        Đăng ký
+                                    </span>
                                 </a>
                             </div>
-                            <div class="header-inner_user__item d-none">
-                                <a href="javascript:void(0)" class="btn btn-login">
-                                    <i class="fas fa-lock-alt mr-1"></i>
-                                    Đăng nhập
+                            <div class="header-inner_user__item  d-none">
+                                <a href="javascript:void(0)" class="btn btn-login btn-customize">
+                                    <span>
+                                        <i class="fas fa-lock-alt mr-1"></i>
+                                        Đăng nhập
+                                    </span>
                                 </a>
                             </div>
                             <div class="header-inner_user__item">
@@ -148,9 +154,11 @@
                                 </span>
                             </div>
                             <div class="header-inner_user__item">
-                                <a href="javascript:void(0)" class="btn btn-login-outline">
-                                    <i class="fas fa-user mr-1"></i>
-                                    Tester
+                                <a href="javascript:void(0)" class="btn btn-login-outline btn-customize">
+                                    <span>
+                                        <i class="fas fa-user mr-1"></i>
+                                        Tester
+                                    </span>
                                 </a>
                                 <ul class="list-unstyled mb-0">
                                     <li>
@@ -573,6 +581,9 @@
         </div>
     </div>
 </footer>
+<script>
+    let _page = 'page';
+</script>
 <script type="text/javascript" src="./assets/plugins/jquery.min.js"></script>
 <script type="text/javascript"
         src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
