Add Form đăng ký đại lý

--- a/chi-tiet-tin-tuc.html
+++ b/chi-tiet-tin-tuc.html
@@ -44,7 +44,12 @@
 				<div class="col-lg-2">
 					<div class="header-inner_logo">
 						<a href="index.html" class="d-inline-block">
-							<img class="img-fluid header-inner_logo__image" src="./assets/images/telco.png" alt="">
+							<!-- Logo trắng -->
+							<img class="img-fluid logo-white header-inner_logo__image" src="./assets/images/telco.png"
+								 alt="">
+							<!-- Logo màu -->
+							<img class="img-fluid logo-color header-inner_logo__image" src="./assets/images/telco.png"
+								 alt="">
 						</a>
 						<div class="header-inner_hamburger d-block d-lg-none">
 							<button type="button" class="no-animation" id="call-header_mobile">
@@ -132,14 +137,12 @@
 						</div>
 						<div class="header-inner_user d-lg-flex align-items-center justify-content-end">
 							<div class="header-inner_user__item d-none">
-								<a href="dang-ky.html" class="btn btn-register btn-customize">
-									<span>
-										<i class="fas fa-user mr-1"></i>
-										Đăng ký
-									</span>
-								</a>
+								<span>
+									Hotline:
+									<a href="tel:+842435567567">(+84) 2435 567 567</a>
+								</span>
 							</div>
-							<div class="header-inner_user__item  d-none">
+							<div class="header-inner_user__item d-none">
 								<a href="javascript:void(0)" class="btn btn-login btn-customize">
 									<span>
 										<i class="fas fa-lock-alt mr-1"></i>
@@ -493,17 +496,6 @@
 									</li>
 								</ul>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="footer-bottom">
-					<div class="row">
-						<div class="col-6">
-							<a href="#" class="footer-bottom_copyright">Software by Nencer Jsc.,</a>
-						</div>
-						<div class="col-6 text-right">
-							<a href="#" class="footer-bottom_link">English</a>
-							<a href="#" class="footer-bottom_link active">Tiếng việt</a>
 						</div>
 					</div>
 				</div>
