--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <div class="section-form_inner">
                         <form action="">
                             <div class="row row-g3">
-                                <div class="col-md-6">
+                                <div class="col-12 col-sm-6 col-md-3">
                                     <div class="form-group">
                                         <label for="">
                                             Email đăng nhập
@@ -553,7 +553,7 @@
                                         <input type="email" class="form-control" placeholder="Email đăng nhập...">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12 col-sm-6 col-md-3">
                                     <div class="form-group">
                                         <label for="">
                                             Mật khẩu
@@ -561,7 +561,7 @@
                                         <input type="password" class="form-control" placeholder="Mật khẩu đăng nhập...">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12 col-sm-6 col-md-3">
                                     <div class="form-group">
                                         <label for="">
                                             Họ & tên
@@ -569,7 +569,7 @@
                                         <input type="text" class="form-control" placeholder="Họ và tên...">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12 col-sm-6 col-md-3">
                                     <div class="form-group">
                                         <label for="">
                                             Số điện thoại
