--- a/bang-gia.html
+++ b/bang-gia.html
@@ -21,6 +21,7 @@
 	<style>
         :root {
             --primary-color: #ea3023;
+            --primary-hover: #df2d20;
             --dark-color: #363434;
             --gray-color: #798594;
             --transition: .3s all ease-in-out;
