--- a/mua-ma-the.html
+++ b/mua-ma-the.html
@@ -235,7 +235,7 @@
 				<div class="col-md-12">
 					<div class="row">
 						<div class="col-md-3 order-md-1 order-3 mt-3 mt-md-0">
-							<div class="collapse-inner" id="collapse-theme">
+							<div class="collapse-inner nav-tabs border-bottom-0" id="collapse-theme">
 								<div class="collapse-item">
 									<button class="btn collapse-button" type="button" data-toggle="collapse"
 											data-target="#thedt" aria-expanded="true">
@@ -246,33 +246,22 @@
 										<i class="fas fa-angle-down"></i>
 									</button>
 									<div class="collapse show active" id="thedt">
-										<ul class="list-group">
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Viettel</a>
+										<ul class="nav list-group">
+											<li class="nav-item list-group-item">
+												<a href="#tabviettel" class="nav-link active" data-toggle="tab"><i
+														class="fas fa-angle-right"></i>Thẻ Viettel</a>
 											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Vinaphone</a>
+											<li class="nav-item list-group-item">
+												<a href="#tabvinaphone" class="nav-link" data-toggle="tab"><i
+														class="fas fa-angle-right"></i>Thẻ Vinaphone</a>
 											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Mobiphone</a>
-											</li>
-											<li class="list-group-item">
-												<a href="">
-													<i class="fas fa-angle-right"></i>
-													Thẻ Vietnamobile
-												</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Gmobile</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Gusu2</a>
-
+											<li class="nav-item list-group-item">
+												<a href="#tabmobiphone" class="nav-link" data-toggle="tab"><i
+														class="fas fa-angle-right"></i>Thẻ Mobiphone</a>
 											</li>
 										</ul>
 									</div>
 								</div>
-
 								<div class="collapse-item">
 									<button class="btn collapse-button" type="button" data-toggle="collapse"
 											data-target="#thegame" aria-expanded="true">
@@ -283,32 +272,14 @@
 										<i class="fas fa-angle-down"></i>
 									</button>
 									<div class="collapse show active" id="thegame">
-										<ul class="list-group">
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Garena</a>
+										<ul class="nav list-group">
+											<li class="nav-item list-group-item">
+												<a href="#tabgarena" class="nav-link" data-toggle="tab"><i
+														class="fas fa-angle-right"></i>Thẻ Garena</a>
 											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Appota</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Zing</a>
-											</li>
-											<li class="list-group-item">
-												<a href="">
-													<i class="fas fa-angle-right"></i>Thẻ Vcoin
-												</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Gate</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Cà Rốt</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Funcard</a>
-											</li>
-											<li class="list-group-item">
-												<a href=""><i class="fas fa-angle-right"></i>Thẻ Steam</a>
+											<li class="nav-item list-group-item">
+												<a href="#tabappota" class="nav-link" data-toggle="tab"><i
+														class="fas fa-angle-right"></i>Thẻ Appota</a>
 											</li>
 										</ul>
 									</div>
@@ -316,64 +287,309 @@
 							</div>
 						</div>
 						<div class="col-md-5 order-md-2 order-1">
-							<div class="card-price_item">
-								<div class="row row-g3">
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">10.000đ</span>
+							<div class="tab-content">
+								<div class="tab-pane fade active show" id="tabviettel">
+									<div class="card-price_item">
+										<div class="row row-g3">
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">10.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button active">
+													<span class="name">Viettel</span>
+													<span class="price">20.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">30.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">50.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">100.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">200.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">300.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">500.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">1.000.000đ</span>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="col-6">
-										<div class="price-item_button active">
-											<span class="name">Viettel</span>
-											<span class="price">20.000đ</span>
+								</div>
+								<div class="tab-pane fade" id="tabvinaphone">
+									<div class="card-price_item">
+										<div class="row row-g3">
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">10.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button active">
+													<span class="name">Viettel</span>
+													<span class="price">20.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">30.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">50.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">100.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">200.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">300.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">500.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">1.000.000đ</span>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">30.000đ</span>
+								</div>
+								<div class="tab-pane fade" id="tabmobiphone">
+									<div class="card-price_item">
+										<div class="row row-g3">
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">10.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button active">
+													<span class="name">Viettel</span>
+													<span class="price">20.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">30.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">50.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">100.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">200.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">300.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">500.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">1.000.000đ</span>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">50.000đ</span>
+								</div>
+								<div class="tab-pane fade" id="tabgarena">
+									<div class="card-price_item">
+										<div class="row row-g3">
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">10.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button active">
+													<span class="name">Viettel</span>
+													<span class="price">20.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">30.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">50.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">100.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">200.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">300.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">500.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">1.000.000đ</span>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">100.000đ</span>
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">200.000đ</span>
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">300.000đ</span>
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">500.000đ</span>
-										</div>
-									</div>
-									<div class="col-6">
-										<div class="price-item_button">
-											<span class="name">Viettel</span>
-											<span class="price">1.000.000đ</span>
+								</div>
+								<div class="tab-pane fade" id="tabappota">
+									<div class="card-price_item">
+										<div class="row row-g3">
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">10.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button active">
+													<span class="name">Viettel</span>
+													<span class="price">20.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">30.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">50.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">100.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">200.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">300.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">500.000đ</span>
+												</div>
+											</div>
+											<div class="col-6">
+												<div class="price-item_button">
+													<span class="name">Viettel</span>
+													<span class="price">1.000.000đ</span>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
+
 						</div>
 						<div class="col-md-4 order-md-3 order-2 mt-3 mt-md-0">
 							<div class="price-wallet">
